--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Login Form</title>
+    <title>Day-1 Tasks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
