--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Day-1 Tasks</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/png" href="https://i.postimg.cc/Twc60dm8/DAY-1.png">
+    <link rel="shortcut icon" type="image/png" href="https://i.postimg.cc/Mpk3ztDs/DAY-1.png">
   </head>
   <body>
     <!-- =====================================  vertical nav bar start  ================================== -->
